// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BadgeButton accept jsx as children 1`] = `
<span
  className="css-1ydbtd2"
  onClick={[Function]}
  onKeyPress={[Function]}
  role="button"
  tabIndex={-1}
>
  <span>
    string
  </span>
</span>
`;

exports[`BadgeButton danger 1`] = `
<span
  className="css-16xjcxo"
  onClick={[Function]}
  onKeyPress={[Function]}
  role="button"
  tabIndex={-1}
>
  danger
</span>
`;

exports[`BadgeButton default 1`] = `
<span
  className="css-1ydbtd2"
  onClick={[Function]}
  onKeyPress={[Function]}
  role="button"
  tabIndex={-1}
>
  default
</span>
`;

exports[`BadgeButton outline 1`] = `
<span
  className="css-w3zj9q"
  onClick={[Function]}
  onKeyPress={[Function]}
  role="button"
  tabIndex={-1}
>
  outline
</span>
`;

exports[`BadgeButton primary 1`] = `
<span
  className="css-n0m8w5"
  onClick={[Function]}
  onKeyPress={[Function]}
  role="button"
  tabIndex={-1}
>
  primary
</span>
`;

exports[`BadgeButton success 1`] = `
<span
  className="css-qzf5te"
  onClick={[Function]}
  onKeyPress={[Function]}
  role="button"
  tabIndex={-1}
>
  success
</span>
`;

exports[`BadgeButton warning 1`] = `
<span
  className="css-dus73p"
  onClick={[Function]}
  onKeyPress={[Function]}
  role="button"
  tabIndex={-1}
>
  warning
</span>
`;
